# TSM_ProgAlg

./: .gitignore  Exercises.sln
00_Exercise/: BankAccount.h  CMakeLists.txt  Exercise0.vcxproj  RWLock.h  main.cpp
01_Exercise/: CMakeLists.txt  Exercise1.vcxproj  Stopwatch.h  imageprocessing.cpp  main.cpp  summation.cpp
02_Exercise/: CMakeLists.txt  Exercise2.vcxproj  Exercise2.vcxproj.filters  acc.cpp  amp.cpp  edges.cl  main.cpp  ocl.cpp  ocl.h
04_Exercise/: Exercise4.vcxproj  OddEvenSort.cpp
05_Exercise/: Exercise5.vcxproj  Exercise5.vcxproj.filters  main.cpp  matrix.h  matrixmult.cl  matrixmult.cpp  ocl.cpp
05_Exercise_MPI/: Exercise5_MPI.vcxproj
06_Exercise/: Exercise6.vcxproj
06_Exercise_MPI/: Exercise6_MPI.vcxproj  OpenList.h  Searcher.hpp
FreeImage/: FreeImage.vcxitems
Stopwatch/: Stopwatch.vcxitems
